// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success should create kosko.toml 1`] = `"components = [\\"*\\"]"`;

exports[`success should create package.json 1`] = `
"{
  \\"dependencies\\": {
    \\"@kosko/env\\": \\"^1.1.0\\",
    \\"kosko\\": \\"^1.1.0\\",
    \\"kubernetes-models\\": \\"^1.5.2\\"
  }
}
"
`;

exports[`when the target exists when package.json exists should update package.json 1`] = `
"{
  \\"name\\": \\"foo\\",
  \\"version\\": \\"1.2.3\\",
  \\"dependencies\\": {
    \\"@kosko/env\\": \\"^1.1.0\\",
    \\"debug\\": \\"3.2.1\\",
    \\"kosko\\": \\"^1.1.0\\",
    \\"kubernetes-models\\": \\"^1.5.2\\"
  }
}
"
`;
